--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--[CV - <font size="4">中文</font>/ <a href="files/CV/chenxin_cv_en_202011.pdf">English</a>]<br>-->
         [<a href="files/CV/CV_Zhao.pdf">Download CV</a>]<br>
         [<a href="mailto:zhaofq@shanghaitech.edu.cn">Email</a> | <a href="https://github.com/zhaofuq">GitHub</a> |
-        <a href="https://www.linkedin.com/in/xin-chen-cs/">LinkedIn</a>]
+        <a href="https://www.linkedin.cn/injobs/in/fuqiang-zhao-190227208">LinkedIn</a>]
         [<a href="https://aideadlin.es/?sub=ML,CV,NLP,RO,SP,DM">Conference Timer</a>]
       </h1>
     </div>
@@ -232,7 +232,7 @@
                 </div>
                 <h4> R&amp;D Intern</h4>
                 <p>I work as a part-time research and development intern at <a href="https://www.dgene.com/eng/">DGene
-                    Digital Technology Inc. </p>
+                    Digital Technology Inc. </a></p>
                 <br>
               </div>
               <!-- .Service-content ends here -->
@@ -261,7 +261,7 @@
               <!-- .Icon ends here -->
               <div class="service-content">
                 <div class="d-md-flex justify-content-between">
-                  <h4><a href="http://english.qut.edu.cn/">China University of Petroleum</a></h4>
+                  <h4><a href="http://english.upc.edu.cn/">China University of Petroleum - 中国石油大学(华东)</a></h4>
                   <h4>Sep. 2016 - Jul. 2020 </h4>
                 </div>
                 <h4> Bachelor </h4>
