--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="col-md-9 col-12 paper-content">
               <h4>Fourier PlenOctrees for Dynamic Radiance Field Rendering in Real-time<br>
               </h4>
-              <p>Liao Wang*, Jiakai Zhang*, Xinhang Liu, Fuqiang Zhao, Yanshun Zhang, Yingliang Zhang, Minye Wu Lan Xu, Jingyi Yu<br>
+              <p>Liao Wang*, Jiakai Zhang*, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Yanshun Zhang, Yingliang Zhang, Minye Wu Lan Xu, Jingyi Yu<br>
               </p>
               <p>(<strong>arxiv 2022</strong>)</p>
               <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
@@ -128,6 +128,23 @@
             </div>
             <!-- .Service-content ends here -->
           </div>
+          <!-- <div class="row paper-box">
+            <div class="col-md-3 col-12 paper_img"> 
+              <img 
+                src="files/Paper/neuvv.png" width="90%" playsinline=""
+                autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
+              </div>
+            <div class="col-md-9 col-12 paper-content">
+              <h4><strong>NeuVV</strong>: Neural Volumetric Videos with Immersive Rendering and Editing<br>
+              </h4>
+              <p>Jiakai Zhang, Liao Wang, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Minzhang Li, Haizhao Dai, Boyuan Zhang, Wei Yang, Lan Xu, Jingyi Yu<br>
+              </p>
+              <p>(<strong>arxiv 2022</strong>)</p>
+              <p>
+                [<a href="https://arxiv.org/pdf/2202.06088.pdf">ArxivPage</a>]
+              </p>
+            </div>
+          </div> -->
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
@@ -138,7 +155,7 @@
             <div class="col-md-9 col-12 paper-content">
               <h4><strong>HumanNeRF</strong>: Generalizable Neural Human Radiance Field from Sparse Inputs<br>
               </h4>
-              <p>Fuqiang Zhao, Wei Yang, Jiakai Zhang, Pei Lin, Yingliang Zhang, Jingyi Yu, Lan Xu<br>
+              <p><strong>Fuqiang Zhao</strong>, Wei Yang, Jiakai Zhang, Pei Lin, Yingliang Zhang, Jingyi Yu, Lan Xu<br>
               </p>
               <p>(<strong>arxiv 2022</strong>)</p>
               <!-- <p class="text-left">We propose SportsCap – the first approach for simultaneously capturing 3D human motions and understanding fine-grained actions from monocular challenging sports video input. </p> -->
@@ -160,7 +177,7 @@
             <div class="col-md-9 col-12 paper-content">
               <h4><strong>MVSNeRF</strong>: Fast Generalizable Radiance Field Reconstruction from Multi-View Stereo<br>
               </h4>
-              <p>Anpei Chen, Zexiang Xu, Fuqiang Zhao, Xiaoshuai Zhang, Fanbo Xiang, Jingyi Yu, Hao Su<br>
+              <p>Anpei Chen, Zexiang Xu, <strong>Fuqiang Zhao</strong>, Xiaoshuai Zhang, Fanbo Xiang, Jingyi Yu, Hao Su<br>
               </p>
               <p>(<strong> ICCV 2021</strong>) International Conference on Computer Vision</p>
               <!-- <p class="text-left">We propose SportsCap – the first approach for simultaneously capturing 3D human motions and understanding fine-grained actions from monocular challenging sports video input. </p> -->
@@ -180,7 +197,7 @@
                 <!-- .Icon ends here -->
                 <div class="col-md-9 col-12 paper-content">
                   <h4>Editable Free-Viewpoint Video using a Layered Neural Representation</h4>
-                  <p>Jiakai Zhang, Xinhang Liu, Xinyi Ye, Fuqiang Zhao, Yanshun Zhang, Minye Wu, Yingliang Zhang, Lan Xu and Jingyi Yu</p>
+                  <p>Jiakai Zhang, Xinhang Liu, Xinyi Ye, <strong>Fuqiang Zhao</strong>, Yanshun Zhang, Minye Wu, Yingliang Zhang, Lan Xu and Jingyi Yu</p>
                   <p>(<strong>SIGGRAPH 2021</strong>) ACM Transactions on Graphics(Proce. of ACM SIGGRAPH 2021)</p>
                   <!-- <p class="text-left">We present a fully automatic framework for extracting editable 3D objects directly from a single photograph. </p> -->
                   <p>[<a href="https://jiakai-zhang.github.io/st-nerf/">ProjectPage</a>]  
@@ -201,7 +218,7 @@
             <div class="col-md-9 col-12 paper-content">
               <h4><strong>MirrorNeRF</strong>: One-shot Neural Portrait Radiance Field from Multi-mirror Catadioptric Imaging<br>
               </h4>
-              <p>Ziyu Wang, Liao Wang, Fuqiang Zhao, Minye Wu, Lan Xu, Jingyi Yu<br>
+              <p>Ziyu Wang, Liao Wang, <strong>Fuqiang Zhao</strong>, Minye Wu, Lan Xu, Jingyi Yu<br>
               </p>
               <p>(<strong> ICCP 2021</strong>) International Conference on Computational Photography</p>
               <!-- <p class="text-left">We propose SportsCap – the first approach for simultaneously capturing 3D human motions and understanding fine-grained actions from monocular challenging sports video input. </p> -->
