--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
               </p>
               <p>(<strong>arxiv 2022</strong>)</p>
               <!-- <p class="text-left">We propose SportsCap – the first approach for simultaneously capturing 3D human motions and understanding fine-grained actions from monocular challenging sports video input. </p> -->
-              <p>[<a href="https://zhaofuq.github.io/human-nerf/">ProjectPage</a>] 
+              <p>[<a href="https://zhaofuq.github.io/humannerf/">ProjectPage</a>] 
                 [<a href="https://arxiv.org/pdf/2112.02789.pdf">ArxivPage</a>]
-                [<a href="https://zhaofuq.github.io/human-nerf/">Code</a>]
+                [<a href="https://zhaofuq.github.io/humannerf/">Code</a>]
 
               </p>
             </div>
