--- a/humannerf/index.html
+++ b/humannerf/index.html
@@ -70,7 +70,7 @@
 
 
     <div class="section">
-        <h2>Pipeline</h2>
+        <h2>Overview</h2>
         <hr>
         <div class="row align-items-center">
             <div class="col justify-content-center text-center">
