--- a/humannerf/index.html
+++ b/humannerf/index.html
@@ -15,7 +15,7 @@
                                 Jingyi Yu,
                                 Lan Xu">
 
-    <title>HumanNeRF: Generalizable Neural Human Radiance Field from Sparse Inputs</title>
+    <title>HumanNeRF: Efficiently Generated Human Radiance Field from Sparse Inputs</title>
     <!-- Bootstrap core CSS -->
     <!--link href="bootstrap.min.css" rel="stylesheet"-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -29,7 +29,7 @@
 <body>
 <div class="jumbotron jumbotron-fluid">
     <div class="container"></div>
-    <h2>HumanNeRF: Generalizable Neural Human Radiance Field from Sparse Inputs</h2>
+    <h2>HumanNeRF: Efficiently Generated Human Radiance Field from Sparse Inputs</h2>
         <h3>Arxiv 2022</h3>
            <!-- <p class="abstract">A more generalizable neural human radiance field from sparse inputs.</p> -->
     <hr>
@@ -124,7 +124,7 @@
         <hr>
         <div class="bibtexsection">
             @article{zhao2021humannerf,
-                title={HumanNeRF: Generalizable Neural Human Radiance Field from Sparse Inputs},
+                title={HumanNeRF: Efficiently Generated Human Radiance Field from Sparse Inputs},
                 author={Zhao, Fuqiang and Yang, Wei and Zhang, Jiakai and Lin, Pei and
                     Zhang, Yingliang and Yu, Jingyi and Xu, Lan},
                 journal={arXiv preprint arXiv:2112.02789},
