--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </div>
             <!-- .Icon ends here -->
             <div class="col-md-9 col-12 paper-content">
-              <h4><strong>HumanNeRF</strong>: Generalizable Neural Human Radiance Field from Sparse Inputs<br>
+              <h4><strong>HumanNeRF</strong>: Efficiently Generated Human Radiance Field from Sparse Inputs<br>
               </h4>
               <p><strong>Fuqiang Zhao</strong>, Wei Yang, Jiakai Zhang, Pei Lin, Yingliang Zhang, Jingyi Yu, Lan Xu<br>
               </p>
