--- a/humannerf/index.html
+++ b/humannerf/index.html
@@ -30,7 +30,7 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container"></div>
     <h2>HumanNeRF: Efficiently Generated Human Radiance Field from Sparse Inputs</h2>
-        <h3>Arxiv 2022</h3>
+        <h3>CVPR 2022</h3>
            <!-- <p class="abstract">A more generalizable neural human radiance field from sparse inputs.</p> -->
     <hr>
     <p class="authors">
