--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </h4>
               <p>Liao Wang*, Jiakai Zhang*, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Yanshun Zhang, Yingliang Zhang, Minye Wu Lan Xu, Jingyi Yu<br>
               </p>
-              <p>(<strong>arxiv 2022</strong>)</p>
+              <p>(<strong>CVPR 2022</strong>)</p>
               <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>[<a href="https://aoliao12138.github.io/FPO/">ProjectPage</a>] 
                 [<a href="https://arxiv.org/abs/2202.08614">ArxivPage</a>]
@@ -157,7 +157,7 @@
               </h4>
               <p><strong>Fuqiang Zhao</strong>, Wei Yang, Jiakai Zhang, Pei Lin, Yingliang Zhang, Jingyi Yu, Lan Xu<br>
               </p>
-              <p>(<strong>arxiv 2022</strong>)</p>
+              <p>(<strong>CVPR 2022</strong>)</p>
               <!-- <p class="text-left">We propose SportsCap – the first approach for simultaneously capturing 3D human motions and understanding fine-grained actions from monocular challenging sports video input. </p> -->
               <p>[<a href="https://zhaofuq.github.io/humannerf/">ProjectPage</a>] 
                 [<a href="https://arxiv.org/pdf/2112.02789.pdf">ArxivPage</a>]
