--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </h4>
               <p>Liao Wang*, Jiakai Zhang*, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Yanshun Zhang, Yingliang Zhang, Minye Wu Lan Xu, Jingyi Yu<br>
               </p>
-              <p>(<strong>CVPR 2022</strong>)</p>
+              <p>(<strong>CVPR 2022</strong>)Conference on Computer Vision and Pattern Recognition</p>
               <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>[<a href="https://aoliao12138.github.io/FPO/">ProjectPage</a>] 
                 [<a href="https://arxiv.org/abs/2202.08614">ArxivPage</a>]
@@ -128,23 +128,7 @@
             </div>
             <!-- .Service-content ends here -->
           </div>
-          <!-- <div class="row paper-box">
-            <div class="col-md-3 col-12 paper_img"> 
-              <img 
-                src="files/Paper/neuvv.png" width="90%" playsinline=""
-                autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
-              </div>
-            <div class="col-md-9 col-12 paper-content">
-              <h4><strong>NeuVV</strong>: Neural Volumetric Videos with Immersive Rendering and Editing<br>
-              </h4>
-              <p>Jiakai Zhang, Liao Wang, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Minzhang Li, Haizhao Dai, Boyuan Zhang, Wei Yang, Lan Xu, Jingyi Yu<br>
-              </p>
-              <p>(<strong>arxiv 2022</strong>)</p>
-              <p>
-                [<a href="https://arxiv.org/pdf/2202.06088.pdf">ArxivPage</a>]
-              </p>
-            </div>
-          </div> -->
+
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
@@ -157,7 +141,7 @@
               </h4>
               <p><strong>Fuqiang Zhao</strong>, Wei Yang, Jiakai Zhang, Pei Lin, Yingliang Zhang, Jingyi Yu, Lan Xu<br>
               </p>
-              <p>(<strong>CVPR 2022</strong>)</p>
+              <p>(<strong>CVPR 2022</strong>)Conference on Computer Vision and Pattern Recognition</p>
               <!-- <p class="text-left">We propose SportsCap – the first approach for simultaneously capturing 3D human motions and understanding fine-grained actions from monocular challenging sports video input. </p> -->
               <p>[<a href="https://zhaofuq.github.io/humannerf/">ProjectPage</a>] 
                 [<a href="https://arxiv.org/pdf/2112.02789.pdf">ArxivPage</a>]
