--- a/humannerf/index.html
+++ b/humannerf/index.html
@@ -52,7 +52,7 @@
 <div class="container">
     <div class="section">
         <div class="vcontainer">
-            <iframe class='video' src="https://www.youtube.com/watch?v=CKeXnQiLCd4" frameborder="0"
+            <iframe class='video' src="https://www.youtube.com/embed/CKeXnQiLCd4" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
         </div>
