--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </h4>
               <p>Liao Wang*, Jiakai Zhang*, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Yanshun Zhang, Yingliang Zhang, Minye Wu Lan Xu, Jingyi Yu<br>
               </p>
-              <p>(<strong>CVPR 2022</strong>)Conference on Computer Vision and Pattern Recognition</p>
+              <p>(<strong>CVPR 2022 Oral</strong>)Conference on Computer Vision and Pattern Recognition</p>
               <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>[<a href="https://aoliao12138.github.io/FPO/">ProjectPage</a>] 
                 [<a href="https://arxiv.org/abs/2202.08614">ArxivPage</a>]
