--- a/humannerf/index.html
+++ b/humannerf/index.html
@@ -44,8 +44,8 @@
     </p>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://arxiv.org/pdf/2112.02789.pdf">Paper</a>
-        <a class="btn btn-primary" href="https://zhaofuq.github.io/humannerf">Code</a>
-        <a class="btn btn-primary" href="https://zhaofuq.github.io/humannerf">Data</a>
+        <a class="btn btn-primary" href="https://zhaofuq.github.io/humannerf">Code(soon)</a>
+        <a class="btn btn-primary" href="https://zhaofuq.github.io/humannerf">Data(soon)</a>
     </div>
 </div>
 
