--- a/index.html
+++ b/index.html
@@ -107,6 +107,28 @@
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
+                src="files/Paper/neuvv.png" width="90%" playsinline=""
+                autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
+              </div>
+            <!-- .Icon ends here -->
+            <div class="col-md-9 col-12 paper-content">
+              <h4>NeuVV: Neural Volumetric Videos with Immersive Rendering and Editing<br>
+              </h4>
+              <p>Jiakai Zhang, Liao Wang, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Minzhang Li, Haizhao Dai, Boyuan Zhang, Wei Yang, Lan Xu, Jingyi Yu<br>
+              </p>
+              <p><strong>Arxiv 2022</strong></p>
+              <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
+              <p>
+                [<a href="https://arxiv.org/pdf/2202.06088.pdf">ArxivPage</a>]
+
+              </p>
+            </div>
+            <!-- .Service-content ends here -->
+          </div>
+
+          <div class="row paper-box">
+            <div class="col-md-3 col-12 paper_img"> 
+              <img 
                 src="files/Paper/fpo.png" width="90%" playsinline=""
                 autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
               </div>
