--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
   <div class="sidenav">
-    <div class="side_top"> <img src="images/zhaofq.png" alt="news image" class="img-fluid navimg">
+    <div class="side_top"> <img src="images/zhaofq.jpg" alt="news image" class="img-fluid navimg">
       <h1> Fuqiang Zhao - 赵富强 <br>
         <!--[CV - <a href="files/CV/chenxin_cv_cn_201803.pdf"><font size="4">中文</font></a> / <a href="files/CV/chenxin_cv_en_202007.pdf">English</a>]<br>-->
         <!--[CV - <font size="4">中文</font>/ <a href="files/CV/chenxin_cv_en_202011.pdf">English</a>]<br>-->
