update paper cover

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </h4>
               <p>Jiakai Zhang, Liao Wang, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Minzhang Li, Haizhao Dai, Boyuan Zhang, Wei Yang, Lan Xu, Jingyi Yu<br>
               </p>
-              <p><strong>Arxiv 2022</strong></p>
+              <p><strong>(<strong>Arxiv 2022</strong>)Preprint</p>
               <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>
                 [<a href="https://arxiv.org/pdf/2202.06088.pdf">ArxivPage</a>]
