--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div>
         <div class="mx-auto text-left">
           <h1><strong>Fuqiang Zhao - 赵富强</strong></h1>
-          <h5>Master</h5>
+          <h5>Ph.D.</h5>
           <h6>zhaofq@shanghaitech.edu.cn</h6><br>
           <!-- <h5><a href="https://www.tencent.com/"><b>Tencent - 腾讯</b></a></h5> -->
           <!-- <h5><a href="http://english.ucas.ac.cn/"><b>University of Chinese Academy of Sciences - 中国科学院大学 </b></a></h5> -->
@@ -72,14 +72,14 @@
           <!-- <h5><a href="https://www.dgene.com/cn/">DGene</a> </h5> -->
           <!-- <p>. </p> -->
           <!-- <p class="banp mt-5"> </p> -->
-          Hi, I am the second-year master student in <strong>computer science and technology</strong> at VRVC Lab, <a
+          Hi, now I am PhD student in <strong>computer science and technology</strong> at VRVC Lab, <a
             href="http://www.shanghaitech.edu.cn/">ShanghaiTech University</a> ,advised by <a
             href="http://www.yu-jingyi.com/">Prof. Jingyi Yu</a>. I obtained my B.E. in <strong>software engineering </strong> at <a
             href="https://www.upc.edu.cn/">China University of Petroleum</a>.
             <br><br>
             I am passionate and interested in <strong>4D reconstruction & rendering</strong> tasks in <strong>Computer Vision and Computer Graphics</strong>.
           </p>
-          <li>Neural Rendering</li>
+          <li>Neural Rendering and Reconstruction</li>
           <li>Image-based Modeling</li>
           <li>3D Human Modeling and Dynamics </li>
           <!-- <li>Human Performance Capture,&nbsp;&nbsp;3D Human Modeling and Dynamics</li> -->
