--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <!-- <h5><a href="https://www.dgene.com/cn/">DGene</a> </h5> -->
           <!-- <p>. </p> -->
           <!-- <p class="banp mt-5"> </p> -->
-          Hi, now I am PhD student in <strong>computer science and technology</strong> at VRVC Lab, <a
+          Hi, now I am a PhD student in <strong>computer science and technology</strong> at VRVC Lab, <a
             href="http://www.shanghaitech.edu.cn/">ShanghaiTech University</a> ,advised by <a
             href="http://www.yu-jingyi.com/">Prof. Jingyi Yu</a>. I obtained my B.E. in <strong>software engineering </strong> at <a
             href="https://www.upc.edu.cn/">China University of Petroleum</a>.
@@ -116,7 +116,7 @@
               </h4>
               <p>Jiakai Zhang, Liao Wang, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Minzhang Li, Haizhao Dai, Boyuan Zhang, Wei Yang, Lan Xu, Jingyi Yu<br>
               </p>
-              <p><strong>(<strong>Arxiv 2022</strong>)Preprint</p>
+              <p>(<strong>Arxiv 2022</strong>)Preprint</p>
               <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>
                 [<a href="https://arxiv.org/pdf/2202.06088.pdf">ArxivPage</a>]
