--- a/humannerf/index.html
+++ b/humannerf/index.html
@@ -45,7 +45,7 @@
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://arxiv.org/pdf/2112.02789.pdf">Paper</a>
         <a class="btn btn-primary" href="https://zhaofuq.github.io/humannerf">Code(soon)</a>
-        <a class="btn btn-primary" href="https://zhaofuq.github.io/humannerf">Data(soon)</a>
+        <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1P3OyAjTNh1V74OSPf0JJ1OnF-E6oklKB?usp=sharing">Data/a>
     </div>
 </div>
 
@@ -121,13 +121,14 @@
         <h2>Bibtex</h2>
         <hr>
         <div class="bibtexsection">
-            @article{zhao2021humannerf,
-                title={HumanNeRF: Efficiently Generated Human Radiance Field from Sparse Inputs},
-                author={Zhao, Fuqiang and Yang, Wei and Zhang, Jiakai and Lin, Pei and
-                    Zhang, Yingliang and Yu, Jingyi and Xu, Lan},
-                journal={arXiv preprint arXiv:2112.02789},
-                year={2021}
-              }
+            @InProceedings{Zhao_2022_CVPR,
+                author    = {Zhao, Fuqiang and Yang, Wei and Zhang, Jiakai and Lin, Pei and Zhang, Yingliang and Yu, Jingyi and Xu, Lan},
+                title     = {HumanNeRF: Efficiently Generated Human Radiance Field From Sparse Inputs},
+                booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+                month     = {June},
+                year      = {2022},
+                pages     = {7743-7753}
+            }
         </div>
     </div>
 
