--- a/humannerf/index.html
+++ b/humannerf/index.html
@@ -44,7 +44,7 @@
     </p>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://arxiv.org/pdf/2112.02789.pdf">Paper</a>
-        <a class="btn btn-primary" href="https://zhaofuq.github.io/humannerf">Code(soon)</a>
+        <a class="btn btn-primary" href="https://github.com/zhaofuq/HumanNeRF">Code</a>
         <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1P3OyAjTNh1V74OSPf0JJ1OnF-E6oklKB?usp=sharing">Data</a>
     </div>
 </div>
