--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div>
         <div class="mx-auto text-left">
           <h1><strong>Fuqiang Zhao - 赵富强</strong></h1>
-          <h5>Ph.D.</h5>
+          <h5>Ph.D Candidate</h5>
           <h6>zhaofq@shanghaitech.edu.cn</h6><br>
           <!-- <h5><a href="https://www.tencent.com/"><b>Tencent - 腾讯</b></a></h5> -->
           <!-- <h5><a href="http://english.ucas.ac.cn/"><b>University of Chinese Academy of Sciences - 中国科学院大学 </b></a></h5> -->
@@ -107,6 +107,28 @@
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
+                src="files/Paper/HPRAM.jpg" width="90%" playsinline=""
+                autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
+              </div>
+            <!-- .Icon ends here -->
+            <div class="col-md-9 col-12 paper-content">
+              <h4>Human Performance Modeling and Rendering via Neural Animated Mesh<br>
+              </h4>
+              <p><strong>Fuqiang Zhao</strong>, Yuheng Jiang, Kaixin Yao, Jiakai Zhang, Liao Wang, Haizhao Dai, Yuhui Zhong, Yingliang Zhang, Minye Wu, Lan Xu, Jingyi Yu<br>
+              </p>
+              <p>(<strong>SIGGRAPH Aisa 2022</strong>)</p>
+              <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
+              <p>
+                [<a href="https://arxiv.org/pdf/2209.08468.pdf">ArxivPage</a>][<a href="https://github.com/zhaofuq/Instant-NSR">Code1</a>][<a href="https://github.com/nowheretrix/Instant-NK">Code2</a>] 
+              </p>
+            </div>
+            <!-- .Service-content ends here -->
+          </div>
+
+
+          <div class="row paper-box">
+            <div class="col-md-3 col-12 paper_img"> 
+              <img 
                 src="files/Paper/neuvv.png" width="90%" playsinline=""
                 autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
               </div>
@@ -120,7 +142,6 @@
               <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>
                 [<a href="https://arxiv.org/pdf/2202.06088.pdf">ArxivPage</a>]
-
               </p>
             </div>
             <!-- .Service-content ends here -->
@@ -251,7 +272,7 @@
               <div class="service-content">
                 <div class="d-md-flex justify-content-between">
                   <h4><a href="https://www.dgene.com/cn/">DGene Digital Technology Inc. - 上海叠境数字</a></h4>
-                  <h4> Jan. 2021 - Present</h4>
+                  <h4> Jan. 2022 - Sep. 2022</h4>
                 </div>
                 <h4> R&amp;D Intern</h4>
                 <p>I work as a part-time research and development intern at <a href="https://www.dgene.com/eng/">DGene
