--- a/index.html
+++ b/index.html
@@ -271,7 +271,23 @@
               <!-- .Icon ends here -->
               <div class="service-content">
                 <div class="d-md-flex justify-content-between">
-                  <h4><a href="https://www.dgene.com/cn/">DGene Digital Technology Inc. - 上海叠境数字</a></h4>
+                  <h4><a href="http://neudim.com/">NeuDim Digital Technology Inc. - 上海赜深数字科技有限公司</a></h4>
+                  <h4> July. 2022 - Present</h4>
+                </div>
+                <h4> CEO&amp;Founder</h4>
+                <p>NeuDim aims to substitute classical photogrammetry-based 3D/4D reconstruction 
+                    with emerging neural approaches. It was incubated from the Visual Data Intelligence (VDI) Center at ShanghaiTech, 
+                    by a group of fearless PhD students with various expertise on neural modeling, rendering, and tracking.</a></p>
+                <br>
+              </div>
+              <!-- .Service-content ends here -->
+            </div>
+            <div class="d-flex experience-box">
+              <div class="icon"><span class="fa fa-briefcase"></span> </div>
+              <!-- .Icon ends here -->
+              <div class="service-content">
+                <div class="d-md-flex justify-content-between">
+                  <h4><a href="https://www.dgene.com/cn/">DGene Digital Technology Inc. - 上海叠境数字科技有限公司</a></h4>
                   <h4> Jan. 2022 - Sep. 2022</h4>
                 </div>
                 <h4> R&amp;D Intern</h4>
@@ -293,8 +309,8 @@
                   <h4><a href="http://www.shanghaitech.edu.cn/eng/">ShanghaiTech University - 上海科技大学</a></h4>
                   <h4>Sep. 2020 - Present </h4>
                 </div>
-                <h4> Master Student</h4>
-                <p>I now am a second-year master student on computer vision research, advised by <a href="http://www.yu-jingyi.com/">Prof. Jingyi Yu</a> 
+                <h4> Ph.D Candidate</h4>
+                <p>I now am a Ph.D candidate on computer vision research, advised by <a href="http://www.yu-jingyi.com/">Prof. Jingyi Yu</a> 
                   and developed a light-weight framework for rendering 3D dynamic humans from a six RGB cameras.</p>
                 <br>
               </div>
