link Sig Aisa project

--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
               <p>(<strong>SIGGRAPH Aisa 2022</strong>)</p>
               <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>
-                [<a href="https://arxiv.org/pdf/2209.08468.pdf">ArxivPage</a>][<a href="https://github.com/zhaofuq/Instant-NSR">Code1</a>][<a href="https://github.com/nowheretrix/Instant-NK">Code2</a>] 
+                [<a href="https://zhaofuq.github.io/NeuralAM/">ProjectPage</a>]
+                [<a href="https://arxiv.org/pdf/2209.08468.pdf">ArxivPage</a>]
+                [<a href="https://github.com/zhaofuq/Instant-NSR">Code1</a>]
+                [<a href="https://github.com/nowheretrix/Instant-NK">Code2</a>] 
               </p>
             </div>
             <!-- .Service-content ends here -->
