neural am application

--- a/NeuralAM/index.html
+++ b/NeuralAM/index.html
@@ -180,6 +180,14 @@
     </div>
 
     <div class="section">
+        <h2>Applications</h2>
+        <hr>
+        <video style="width:100%" controls>
+            <source src="img/Application.mp4" type="video/mp4">
+        </video>
+    </div>
+
+    <div class="section">
         <h2>Paper</h2>
         <hr>
         <div>
