--- a/NeuralAM/index.html
+++ b/NeuralAM/index.html
@@ -127,11 +127,19 @@
             <source src="img/nsr-results.mp4" type="video/mp4">
         </video>
         <hr>
-        <h3>More Results of NSR</h3>
+        <h3>PyTorch Implementation of NSR</h3>
         <hr>
         <video style="width:100%" controls>
             <source src="img/nsr-more.mp4" type="video/mp4">
         </video>
+        <hr>
+        <h3>CUDA Implementation of NSR</h3>
+        <hr>
+        <video style="width:100%" controls>
+            <source src="img/nsr-fast-720p.mp4" type="video/mp4">
+        </video>
+
+
 
     </div>
 
