--- a/NeuralAM/index.html
+++ b/NeuralAM/index.html
@@ -51,8 +51,8 @@
     </p>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://arxiv.org/pdf/2209.08468.pdf">Paper</a>
-        <a class="btn btn-primary" href="https://github.com/zhaofuq/Instant-NSR">Code1</a>
-        <a class="btn btn-primary" href="https://github.com/nowheretrix/Instant-NK">Code2</a>
+        <a class="btn btn-primary" href="https://github.com/zhaofuq/Instant-NSR">Code(NSR)</a>
+        <a class="btn btn-primary" href="https://github.com/nowheretrix/Instant-NK">Code(NT)</a>
         <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1QhEXw9vrqRW5jUNqPGuxOwqbNC9r0Uay?usp=sharing">Data</a>
     </div>
 </div>
@@ -195,7 +195,7 @@
         </video>
     </div>
 
-    <div class="section">
+    <!-- <div class="section">
         <h2>Paper</h2>
         <hr>
         <div>
@@ -206,11 +206,10 @@
                 </a>
             </div>
         </div>
-    </div>
-
+    </div> -->
 
     <div class="section">
-        <h2>Bibtex</h2>
+        <h2>Citation</h2>
         <hr>
         <div class="bibtexsection">
     @article{zhao2022human,
