--- a/NeuralAM/index.html
+++ b/NeuralAM/index.html
@@ -101,8 +101,9 @@
         <h2>Video</h2>
         <hr>
         <div class="vcontainer">
-            <iframe class='video' src="https://www.youtube.com/embed/k6cmr8HVHrQ" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+
+            <iframe class='video' src="https://www.youtube.com/embed/wF6z-t28FTo" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen></iframe>
         </div>
     </div>
