--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
   <div class="sidenav">
-    <div class="side_top"> <img src="images/zhaofq.jpg" alt="news image" class="img-fluid navimg">
+    <div class="side_top"> <img src="images/zhaofq.jpg" width="75%" alt="news image" class="img-fluid navimg">
       <h1> Fuqiang Zhao - 赵富强 <br>
         <!--[CV - <a href="files/CV/chenxin_cv_cn_201803.pdf"><font size="4">中文</font></a> / <a href="files/CV/chenxin_cv_en_202007.pdf">English</a>]<br>-->
         <!--[CV - <font size="4">中文</font>/ <a href="files/CV/chenxin_cv_en_202011.pdf">English</a>]<br>-->
@@ -62,16 +62,10 @@
           <h1><strong>Fuqiang Zhao - 赵富强</strong></h1>
           <h5>Ph.D Candidate</h5>
           <h6>zhaofq@shanghaitech.edu.cn</h6><br>
-          <!-- <h5><a href="https://www.tencent.com/"><b>Tencent - 腾讯</b></a></h5> -->
-          <!-- <h5><a href="http://english.ucas.ac.cn/"><b>University of Chinese Academy of Sciences - 中国科学院大学 </b></a></h5> -->
           <h5><a href="http://www.shanghaitech.edu.cn/"><b>ShanghaiTech University - 上海科技大学 </b></a> - <a
               href="http://sist.shanghaitech.edu.cn/">SIST</a> - <a
               href="http://vic.shanghaitech.edu.cn/">VDI</a></h5> 
-          <!-- <h6>&emsp;<a href="http://sist.shanghaitech.edu.cn/">School of Information Science and Technology</a></h6> -->
-          <!-- <br> -->
-          <!-- <h5><a href="https://www.dgene.com/cn/">DGene</a> </h5> -->
-          <!-- <p>. </p> -->
-          <!-- <p class="banp mt-5"> </p> -->
+
           Hi, now I am a PhD student in <strong>computer science and technology</strong> at VRVC Lab, <a
             href="http://www.shanghaitech.edu.cn/">ShanghaiTech University</a> ,advised by <a
             href="http://www.yu-jingyi.com/">Prof. Jingyi Yu</a>. I obtained my B.E. in <strong>software engineering </strong> at <a
@@ -82,9 +76,7 @@
           <li>Neural Rendering and Reconstruction</li>
           <li>Image-based Modeling</li>
           <li>3D Human Modeling and Dynamics </li>
-          <!-- <li>Human Performance Capture,&nbsp;&nbsp;3D Human Modeling and Dynamics</li> -->
-          <!-- <li>Geometric deep learning</li>        -->
-          <!--a class="btn btn-primary mt-lg-5 mt-3 agile-link-bnr" href="#experience" role="button">Learn More</a-->
+
           <br>
           <!-- <font color="#f33"><b>News!</b></font>
           </p>
