--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
           <li>3D Human Modeling and Dynamics </li>
 
           <br>
-          <!-- <font color="#f33"><b>News!</b></font>
+          <font color="#f33"><b>News!</b></font>
           </p>
-          <li>[2022.02]&ensp; I join Tencent as a researcher.</li>
-          <li>[2021.11]&ensp; I obtain my Ph.D. degree.</li>
-          <li>[2021.10]&ensp; TightCap will be presented at ACM SIGGRAPH 2022.</li>
-          <li>[2021.07]&ensp; TightCap is accepted by TOG. Dataset is released.</li>
-          <li>[2021.06]&ensp; SportsCap is accepted by IJCV. Dataset is released.</li> -->
+          <li>[2022.12]&ensp; I serve as CVPR 2023 reviewer, review 3 papers.</li>
+          <li>[2022.09]&ensp; Human Performance Modeling and Rendering via Neural Animated Mesh is accepted by SIGGRAPH Asia 2022.</li>
+          <li>[2022.06]&ensp; I join NeuDim Digital Technology Inc, serve as CEO.</li>
+          <li>[2022.05]&ensp; I serve as ECCV 2022 reviewer, review 3 papers.</li>
+          <li>[2022.03]&ensp; HumanNeRF is accepted by CVPR 2022. Dataset is released.</li>
+          <li>[2022.01]&ensp; I serve as CVPR 2022 reviewer, review 2 papers.</li>
         </div>
       </div>
     </div>
