update paper link

--- a/NeuralAM/index.html
+++ b/NeuralAM/index.html
@@ -50,7 +50,7 @@
         <a href="https://sist.shanghaitech.edu.cn/2020/0707/c7499a53862/page.htm"> Jingyi Yu</a>
     </p>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="https://arxiv.org/pdf/2209.08468.pdf">Paper</a>
+        <a class="btn btn-primary" href="https://dl.acm.org/doi/pdf/10.1145/3550454.3555451">Paper</a>
         <a class="btn btn-primary" href="https://github.com/zhaofuq/Instant-NSR">Code(NSR)</a>
         <a class="btn btn-primary" href="https://github.com/nowheretrix/Instant-NK">Code(NT)</a>
         <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1QhEXw9vrqRW5jUNqPGuxOwqbNC9r0Uay?usp=sharing">Data</a>
@@ -213,13 +213,26 @@
         <h2>Citation</h2>
         <hr>
         <div class="bibtexsection">
-    @article{zhao2022human,
-        title={Human Performance Modeling and Rendering via Neural Animated Mesh},
-        author={Zhao, Fuqiang and Jiang, Yuheng and Yao, Kaixin and Zhang, Jiakai and Wang, Liao and 
-            Dai, Haizhao and Zhong, Yuhui and Zhang, Yingliang and Wu, Minye and Xu, Lan and others},
-        journal={arXiv preprint arXiv:2209.08468},
-        year={2022}
-        }
+    @article{10.1145/3550454.3555451,
+            author = {Zhao, Fuqiang and Jiang, Yuheng and Yao, Kaixin and Zhang, Jiakai 
+            and Wang, Liao and Dai, Haizhao and Zhong, Yuhui and Zhang, Yingliang and 
+            Wu, Minye and Xu, Lan and Yu, Jingyi},
+            title = {Human Performance Modeling and Rendering via Neural Animated Mesh},
+            year = {2022},
+            issue_date = {December 2022},
+            publisher = {Association for Computing Machinery},
+            address = {New York, NY, USA},
+            volume = {41},
+            number = {6},
+            issn = {0730-0301},
+            url = {https://doi.org/10.1145/3550454.3555451},
+            doi = {10.1145/3550454.3555451},
+            journal = {ACM Trans. Graph.},
+            month = {nov},
+            articleno = {235},
+            numpages = {17},
+            keywords = {virtual human, human modeling, neural rendering, human performance capture}
+            }
         </div>
     </div>
 
