--- a/index.html
+++ b/index.html
@@ -96,28 +96,27 @@
       <div class="container-fluid py-lg-1">
         <h3 class="w3_head mb-5">Publications <font size ="5"></font></h3>
         <!-- <h3 class="w3_head mb-5">Selected Publications (<a href="./Publication.html">Complete List…</a>)</h3> -->
-        <div class="col-lg-12">
+        <!-- <div class="col-lg-12">
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
                 src="files/Paper/nephele.png" width="100%" playsinline=""
                 autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
               </div>
-            <!-- .Icon ends here -->
+       
             <div class="col-md-9 col-12 paper-content">
               <h4>NEPHELE: A Neural Platform for Highly Realistic Cloud Radiance Rendering<br>
               </h4>
               <p>Haimin Luo, Siyuan Zhang, <strong>Fuqiang Zhao</strong>, Haotian Jing, Penghao Wang, Zhenxiao Yu, Dongxue Yan, Junran Ding, Boyuan Zhang, Qiang Hu, Shu Yin, Lan Xu, JIngyi Yu<br>
               </p>
               <p>(<strong>Arxiv 2023</strong>)</p>
-              <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>
                 [ProjectPage</a>]
                 [<a href="https://arxiv.org/pdf/2303.04086.pdf">ArxivPage</a>]
               </p>
             </div>
-            <!-- .Service-content ends here -->
-          </div>
+       
+          </div> -->
 
 
           <div class="row paper-box">
