--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="container-fluid py-lg-1">
         <h3 class="w3_head mb-5">Publications <font size ="5"></font></h3>
         <!-- <h3 class="w3_head mb-5">Selected Publications (<a href="./Publication.html">Complete List…</a>)</h3> -->
-        <!-- <div class="col-lg-12">
+        <div class="col-lg-12">
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
@@ -116,7 +116,7 @@
               </p>
             </div>
        
-          </div> -->
+          </div>
 
 
           <div class="row paper-box">
