--- a/index.html
+++ b/index.html
@@ -40,12 +40,9 @@
   <div class="sidenav">
     <div class="side_top"> <img src="images/zhaofq.jpg" width="75%" alt="news image" class="img-fluid navimg">
       <h1> Fuqiang Zhao - 赵富强 <br>
-        <!--[CV - <a href="files/CV/chenxin_cv_cn_201803.pdf"><font size="4">中文</font></a> / <a href="files/CV/chenxin_cv_en_202007.pdf">English</a>]<br>-->
-        <!--[CV - <font size="4">中文</font>/ <a href="files/CV/chenxin_cv_en_202011.pdf">English</a>]<br>-->
-        [<a href="files/CV/CV_Zhao.pdf">Download CV</a>]<br>
-        [<a href="mailto:zhaofq@shanghaitech.edu.cn">Email</a> | <a href="https://github.com/zhaofuq">GitHub</a> |
-        <a href="https://www.linkedin.com/in/fuqiang-zhao-190227208/">LinkedIn</a>]
-        [<a href="https://aideadlin.es/?sub=ML,CV,NLP,RO,SP,DM">Conference Timer</a>]
+        [<a href="files/CV/CV_Zhao.pdf">Download CV</a> | <a href="https://www.linkedin.com/in/fuqiang-zhao-190227208/">LinkedIn</a>]<br>
+        [<a href="mailto:zhaofq@shanghaitech.edu.cn">Email</a> | <a href="https://github.com/zhaofuq">GitHub</a> 
+          | <a href="https://scholar.google.com/citations?user=_LoTgnIAAAAJ&hl=zh-CN&oi=ao">Scholar</a>]<br>
       </h1>
     </div>
     <!-- header -->
@@ -84,8 +81,8 @@
             I am passionate and interested in <strong>reconstruction, rendering and generation</strong> tasks based on <strong>Neural Radiance Field</strong>. 
           </p>
           <li>Neural Rendering</li>
-          <li>3D & 4D Reconstruction</li>
           <li>Text-To-3D & Image-To-3D Generation</li>
+          <li>3D & 4D Reconstruction</li>
           <br>
           <font color="#f33"><b>News!</b></font>
           </p>
@@ -108,7 +105,6 @@
     <section class="publication" id="publication">
       <div class="container-fluid py-lg-1">
         <h3 class="w3_head mb-5">Publications <font size ="5"></font></h3>
-        <!-- <h3 class="w3_head mb-5">Selected Publications (<a href="./Publication.html">Complete List…</a>)</h3> -->
         <div class="col-lg-12">
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
@@ -145,7 +141,6 @@
               <p><strong>Fuqiang Zhao</strong>, Yuheng Jiang, Kaixin Yao, Jiakai Zhang, Liao Wang, Haizhao Dai, Yuhui Zhong, Yingliang Zhang, Minye Wu, Lan Xu, Jingyi Yu<br>
               </p>
               <p>(<strong>SIGGRAPH Aisa 2022</strong>)</p>
-              <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>
                 [<a href="https://zhaofuq.github.io/NeuralAM/">ProjectPage</a>]
                 [<a href="https://arxiv.org/pdf/2209.08468.pdf">ArxivPage</a>]
@@ -170,7 +165,6 @@
               <p>Jiakai Zhang, Liao Wang, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Minzhang Li, Haizhao Dai, Boyuan Zhang, Wei Yang, Lan Xu, Jingyi Yu<br>
               </p>
               <p>(<strong>Arxiv 2022</strong>)Preprint</p>
-              <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>
                 [<a href="https://arxiv.org/pdf/2202.06088.pdf">ArxivPage</a>]
               </p>
@@ -191,13 +185,10 @@
               <p>Liao Wang*, Jiakai Zhang*, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Yanshun Zhang, Yingliang Zhang, Minye Wu Lan Xu, Jingyi Yu<br>
               </p>
               <p>(<strong>CVPR 2022 Oral</strong>)Conference on Computer Vision and Pattern Recognition</p>
-              <!-- <p class="text-left">We present TightCap, a data-driven scheme to capture both the human shape and dressed garments accurately with only a single 3D human scan. </p> -->
               <p>[<a href="https://aoliao12138.github.io/FPO/">ProjectPage</a>] 
                 [<a href="https://arxiv.org/abs/2202.08614">ArxivPage</a>]
-                <!-- [<a href="files/Paper\TOG2021_TightCap\project_page_TightCap\data\TightCap.pdf" target=_blank>Paper</a>]
-                [<a href="files/Paper\TOG2021_TightCap\project_page_TightCap\data\video.mp4" target=_blank>Video</a>] -->
+
                 [<a href="https://aoliao12138.github.io/FPO/">Code</a>] 
-                <!-- [<a href="files\Paper\TOG2021_TightCap\project_page_TightCap\data\bibtex.bib" target=_blank>BibTex</a>] -->
               </p>
             </div>
             <!-- .Service-content ends here -->
@@ -216,7 +207,6 @@
               <p><strong>Fuqiang Zhao</strong>, Wei Yang, Jiakai Zhang, Pei Lin, Yingliang Zhang, Jingyi Yu, Lan Xu<br>
               </p>
               <p>(<strong>CVPR 2022</strong>)Conference on Computer Vision and Pattern Recognition</p>
-              <!-- <p class="text-left">We propose SportsCap – the first approach for simultaneously capturing 3D human motions and understanding fine-grained actions from monocular challenging sports video input. </p> -->
               <p>[<a href="https://zhaofuq.github.io/humannerf/">ProjectPage</a>] 
                 [<a href="https://arxiv.org/pdf/2112.02789.pdf">ArxivPage</a>]
                 [<a href="https://zhaofuq.github.io/humannerf/">Code</a>]
@@ -238,7 +228,6 @@
               <p>Anpei Chen, Zexiang Xu, <strong>Fuqiang Zhao</strong>, Xiaoshuai Zhang, Fanbo Xiang, Jingyi Yu, Hao Su<br>
               </p>
               <p>(<strong> ICCV 2021</strong>) International Conference on Computer Vision</p>
-              <!-- <p class="text-left">We propose SportsCap – the first approach for simultaneously capturing 3D human motions and understanding fine-grained actions from monocular challenging sports video input. </p> -->
               <p>[<a href="https://apchenstu.github.io/mvsnerf/">ProjectPage</a>]  
                 [<a href="https://arxiv.org/abs/2103.15595">ArxivPage</a>] 
                 [<a href="https://github.com/apchenstu/mvsnerf">Code</a>]
@@ -257,7 +246,6 @@
                   <h4>Editable Free-Viewpoint Video using a Layered Neural Representation</h4>
                   <p>Jiakai Zhang, Xinhang Liu, Xinyi Ye, <strong>Fuqiang Zhao</strong>, Yanshun Zhang, Minye Wu, Yingliang Zhang, Lan Xu and Jingyi Yu</p>
                   <p>(<strong>SIGGRAPH 2021</strong>) ACM Transactions on Graphics(Proce. of ACM SIGGRAPH 2021)</p>
-                  <!-- <p class="text-left">We present a fully automatic framework for extracting editable 3D objects directly from a single photograph. </p> -->
                   <p>[<a href="https://jiakai-zhang.github.io/st-nerf/">ProjectPage</a>]  
                     [<a href="https://arxiv.org/pdf/2104.14786.pdf">ArxivPage</a>] 
                     [<a href="https://github.com/DarlingHang/st-nerf">Code</a>]
@@ -279,7 +267,7 @@
               <p>Ziyu Wang, Liao Wang, <strong>Fuqiang Zhao</strong>, Minye Wu, Lan Xu, Jingyi Yu<br>
               </p>
               <p>(<strong> ICCP 2021</strong>) International Conference on Computational Photography</p>
-              <!-- <p class="text-left">We propose SportsCap – the first approach for simultaneously capturing 3D human motions and understanding fine-grained actions from monocular challenging sports video input. </p> -->
+            
               <p>[ProjectPage] 
                 [<a href="https://arxiv.org/pdf/2104.02607.pdf">ArxivPage</a>]
               </p>
@@ -377,13 +365,9 @@
       <div id="id4" style="clear:both"></div>
       <div class="col-md-5 col-12 people-content">
         <p class="banp mt-5"> <a href="http://www.yu-jingyi.com/">Prof. Jingyi Yu</a> - Supervisor </p>
-        <li>IEEE Fellow</li>
-        <li>Program chair of ICPR 2020 and CVPR 2021</li>
         <li>Executive Dean, SIST, ShanghaiTech University</li>
-        <li>Founder, DGene Inc.</li>
         <li>Ph.D.'s degree, MIT, 2005</li>
       </div>
-
       <div id="id4" style="clear:both"></div>
     </section>
 
@@ -392,23 +376,15 @@
       <h3 class="w3_head mb-1">Skills </h3>
       <p class="banp mt-5"> Programming Languages</p>
       <ul class="fa-ul mb-0">
-        <li> <i class="fa-li fa fa-check"></i> C++ (OpenCV, CUDA and so on. )</li>
-        <li> <i class="fa-li fa fa-check"></i> Python (Pytorch, Tensorflow, and so on.)</li>
-      </ul>
-      <p class="banp mt-5"> Softwares</p>
-      <ul class="fa-ul mb-0">
-        <li> <i class="fa-li fa fa-check"></i> Visual Studio, Pycharm, Jupyter Notebook, Android Studio</li>
-        <li> <i class="fa-li fa fa-check"></i> Matlab</li>
-        <li> <i class="fa-li fa fa-check"></i> Blender</li>
-        <li> <i class="fa-li fa fa-check"></i> Adobe Photoshop, Premiere</li>
+        <li> <i class="fa-li fa fa-check"></i> C++, CUDA and so on. </li>
+        <li> <i class="fa-li fa fa-check"></i> Python (Pytorch and so on.)</li>
+        <li> <i class="fa-li fa fa-check"></i> WebGL, javascript and so on.</li>
       </ul>
       <p class="banp mt-5"> Others</p>
       <ul class="fa-ul mb-0">
         <li> <i class="fa-li fa fa-check"></i> Latex, Markdown</li>
 
       </ul>
-      <!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.?i=5ix9r8rqpnb&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script> -->
-      <!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=59qpe4r4c9p&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script> -->
     </section>
     <!-- //skill -->
   </div>
