--- a/LetsGo/index.html
+++ b/LetsGo/index.html
@@ -47,7 +47,7 @@
     </p>
     <!-- <h5>* denotes equal contribution</h5> -->
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="#">Paper</a>
+        <a class="btn btn-primary" href="https://arxiv.org/pdf/2404.09748">Paper</a>
     </div>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="#">Code</a>
