--- a/LetsGo/index.html
+++ b/LetsGo/index.html
@@ -43,7 +43,7 @@
         <a href="http://xu-lan.com/"> Lan Xu </a>,
         <a href="https://yujiaoshi.github.io/"> Yujiao Shi </a>,
         <a href="https://cn.linkedin.com/in/yingliangzhang"> Yingliang Zhang† </a>,
-        <a href="https://sist.shanghaitech.edu.cn/2020/0707/c7499a53862/page.htm"> Jingyi Yu†</a>
+        <a href="http://www.yu-jingyi.com/"> Jingyi Yu†</a>
     </p>
     <!-- <h5>* denotes equal contribution</h5> -->
     <div class="btn-group" role="group" aria-label="Top menu">
