--- a/index.html
+++ b/index.html
@@ -67,24 +67,25 @@
       <div>
         <div class="mx-auto text-left">
           <h1><strong>Fuqiang Zhao - 赵富强</strong></h1>
-          <h5>Ph.D Candidate</h5>
-          <h6>zhaofq@shanghaitech.edu.cn</h6><br>
-          <h5><a href="http://www.shanghaitech.edu.cn/"><b>ShanghaiTech University - 上海科技大学 </b></a> - <a
-              href="http://sist.shanghaitech.edu.cn/">SIST</a> - <a
-              href="http://vic.shanghaitech.edu.cn/">VDI</a></h5> 
-
+          <br> 
+          <h5>Ph.D Candidate @ <a href="http://www.shanghaitech.edu.cn/"><b>ShanghaiTech University - 上海科技大学 </b></a> - <a
+            href="http://sist.shanghaitech.edu.cn/">SIST</a> - <a
+            href="http://vic.shanghaitech.edu.cn/">VDI</a></h5>
+          <p><a href="mailto:zhaofq@shanghaitech.edu.cn">zhaofq@shanghaitech.edu.cn</a></p>
+          <br>
+          <h5><b>About Me</b></h5>
           Hi, now I am a PhD student in <strong>computer science and technology</strong> at VRVC Lab, <a
             href="http://www.shanghaitech.edu.cn/">ShanghaiTech University</a> ,advised by <a
             href="http://www.yu-jingyi.com/">Prof. Jingyi Yu</a>. I obtained my B.E. in <strong>software engineering </strong> at <a
             href="https://www.upc.edu.cn/">China University of Petroleum</a>.
-            <br><br>
+         
             I am passionate and interested in <strong>reconstruction, rendering and generation</strong> tasks based on <strong>Neural Radiance Field</strong>. 
           </p>
           <li>Neural Rendering</li>
           <li>Text-To-3D & Image-To-3D Generation</li>
           <li>3D & 4D Reconstruction</li>
           <br>
-          <font color="#f33"><b>News!</b></font>
+          <h5><b>News!</b></h5>
           </p>
            <div id="news-box">
 			<li>[2023.06]&ensp; I serve as ICCV 2023 reviewer, review 5 papers.</li>
@@ -95,7 +96,7 @@
 			<li>[2022.03]&ensp; HumanNeRF is accepted by CVPR 2022. Dataset is released.</li>
 			<li>[2022.01]&ensp; I serve as CVPR 2022 reviewer, review 2 papers.</li>
 		   </div>
-		   <a id="news-box-more" href="javascript:;"style="font-size:16px;"><b>MORE >></b></a>
+		   <a id="news-box-more" href="javascript:;"style="font-size:16px;">MORE >></a>
         </div>
       </div>
     </div>
@@ -166,6 +167,7 @@
               </p>
               <p>(<strong>Arxiv 2022</strong>)Preprint</p>
               <p>
+                [ProjectPage</a>]
                 [<a href="https://arxiv.org/pdf/2202.06088.pdf">ArxivPage</a>]
               </p>
             </div>
