--- a/index.html
+++ b/index.html
@@ -101,12 +101,10 @@
       </div>
     </div>
 
-
     <!-- publications -->
-    <section class="publication" id="publication">
+    <section class="wedo" id="publication">
       <div class="container-fluid py-lg-1">
         <h3 class="w3_head mb-5">Publications <font size ="5"></font></h3>
-        <div class="col-lg-12">
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
@@ -276,7 +274,6 @@
             </div>
             <!-- .Service-content ends here -->
           </div>
-      </div>
     </section>
 
 
