--- a/LetsGo/index.html
+++ b/LetsGo/index.html
@@ -305,11 +305,12 @@
         <h2>Citation</h2>
         <hr>
         <div class="bibtexsection">
-    @inproceedings{letsgo,
-        author = {Jiadi Cui , Junming Cao , Fuqiang Zhao , Zhipeng He , Yifan Chen , 
-            Yuhui Zhong , Lan Xu , Yujiao Shi , Yingliang Zhang , Jingyi Yu},
-        title = {LetsGo: Large-Scale Garage Modeling and Rendering via LiDAR-Assisted Gaussian Primitives},
-        year = {2024}
+    @article{cui2024letsgo,
+        title={LetsGo: Large-Scale Garage Modeling and Rendering via LiDAR-Assisted Gaussian Primitives},
+        author={Jiadi Cui, Junming Cao, Fuqiang Zhao, Zhipeng He, Yifan Chen, Yuhui Zhong, 
+            Lan Xu, Yujiao Shi, Yingliang Zhang, Jingyi Yu},
+        journal={arXiv preprint arXiv:2404.09748},
+        year={2024}
     }
         </div>
     </div>
