--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </h4>
               <p>Haimin Luo, Siyuan Zhang, <strong>Fuqiang Zhao</strong>, Haotian Jing, Penghao Wang, Zhenxiao Yu, Dongxue Yan, Junran Ding, Boyuan Zhang, Qiang Hu, Shu Yin, Lan Xu, JIngyi Yu<br>
               </p>
-              <p>(<strong>Arxiv 2023</strong>)</p>
+              <p>Arxiv Preprint, 2023</p>
               <p>
                 [ProjectPage</a>]
                 [<a href="https://arxiv.org/pdf/2303.04086.pdf">ArxivPage</a>]
@@ -139,7 +139,7 @@
               </h4>
               <p><strong>Fuqiang Zhao</strong>, Yuheng Jiang, Kaixin Yao, Jiakai Zhang, Liao Wang, Haizhao Dai, Yuhui Zhong, Yingliang Zhang, Minye Wu, Lan Xu, Jingyi Yu<br>
               </p>
-              <p>(<strong>SIGGRAPH Aisa 2022</strong>)</p>
+              <p>(<strong>SIGGRAPH Aisa 2022</strong>) ACM Transactions on Graphics (Proce. of ACM SIGGRAPH Aisa 2022)</p>
               <p>
                 [<a href="https://zhaofuq.github.io/NeuralAM/">ProjectPage</a>]
                 [<a href="https://arxiv.org/pdf/2209.08468.pdf">ArxivPage</a>]
@@ -163,7 +163,7 @@
               </h4>
               <p>Jiakai Zhang, Liao Wang, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Minzhang Li, Haizhao Dai, Boyuan Zhang, Wei Yang, Lan Xu, Jingyi Yu<br>
               </p>
-              <p>(<strong>Arxiv 2022</strong>)Preprint</p>
+              <p>Arxiv Preprint, 2022</p>
               <p>
                 [ProjectPage</a>]
                 [<a href="https://arxiv.org/pdf/2202.06088.pdf">ArxivPage</a>]
@@ -184,7 +184,7 @@
               </h4>
               <p>Liao Wang*, Jiakai Zhang*, Xinhang Liu, <strong>Fuqiang Zhao</strong>, Yanshun Zhang, Yingliang Zhang, Minye Wu Lan Xu, Jingyi Yu<br>
               </p>
-              <p>(<strong>CVPR 2022 Oral</strong>)Conference on Computer Vision and Pattern Recognition</p>
+              <p>(<strong>CVPR 2022 Oral</strong>) Conference on Computer Vision and Pattern Recognition</p>
               <p>[<a href="https://aoliao12138.github.io/FPO/">ProjectPage</a>] 
                 [<a href="https://arxiv.org/abs/2202.08614">ArxivPage</a>]
 
@@ -206,7 +206,7 @@
               </h4>
               <p><strong>Fuqiang Zhao</strong>, Wei Yang, Jiakai Zhang, Pei Lin, Yingliang Zhang, Jingyi Yu, Lan Xu<br>
               </p>
-              <p>(<strong>CVPR 2022</strong>)Conference on Computer Vision and Pattern Recognition</p>
+              <p>(<strong>CVPR 2022</strong>) Conference on Computer Vision and Pattern Recognition</p>
               <p>[<a href="https://zhaofuq.github.io/humannerf/">ProjectPage</a>] 
                 [<a href="https://arxiv.org/pdf/2112.02789.pdf">ArxivPage</a>]
                 [<a href="https://zhaofuq.github.io/humannerf/">Code</a>]
